@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: The same output cannot be present multiple times:  /tmp/dest1
